# devilspie

./: ChangeLog  Makefile.am  NEWS  autogen.sh  configure.ac  configure.in  devilspie.1
po/: LINGUAS  bs.po  ca.po  de.po  en_GB.po  hu.po  nb.po  oc.po  ro.po  sl.po  zh_CN.po
src/: Makefile.am  actions.c  devilspie-matcher-windowname.gob  devilspie.c  devilspie.h  e-sexp.c  matchers.c  xutils.c  xutils.h
